editor/css/stylesheet.css
/* ... */
#draftTable td.disabled
{
  position: relative;
  color: #666;
  font-style: italic;
  cursor: default;
}

#addDraftItem
{
  width: 100%;
  background-color: #888;
  color: #eee;
  text-align: center;
}

  #addDraftItem:hover
  {
    background-color: #666;
    color: white;
  }

.disabled .disabled-text
{
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: inherit;
  text-align: center;
}

#draftTable textarea, #draftTable input, #draftTable select
{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 21px;
  border: none;
}

#draftTable textarea
{
  height: 18px;
  resize: vertical;
}

td.dragHandle
{
  text-align: center;
  cursor: move;
}

#draftTable td.dragHandle.disabled
{
  font-style: normal !important;
  cursor: default;
}

#draftTableHeaders #draftDragAll
{
  background-color: #f7f7f7;
  color: #111;
  text-align: center;
  cursor: move;
}

  #draftTableHeaders #draftDragAll:hover
  {
    background-color: #e7e7ff;
  }

#itemControls
{
  display: block !important;
  float: right;
  margin: 0;
  width: 100%;
  font-size: 14px;
}

  #itemControls button
  {
    display: inline-block;
    width: 15%;
    text-align: center;
  }

#dragBox
{
  position: absolute;
  z-index: 999;
  margin: 0;
  padding: 3px;
  border: 1px solid black;
  background-color: #eee;
  color: black;
  font-size: 12px;
  cursor: move;
  pointer-events: none;
}

#dragBox.error
{
  background-color: #c66;
}

input[type=checkbox][disabled]
{
  color: #ccc;
  opacity: .8;
}

  input[type=checkbox][disabled] + label
  {
    color: #ccc;
    opacity: .8;
  }

#miniwrap
{
  display: none;
}

#minimap
{
  position: relative;
  float: right;
  overflow: scroll;
  margin: 10px;
  padding: 0;
  background-color: white;
  width: 296px;
  height: 296px;
}

  #minimap:hover
  {
    cursor: pointer;
  }

#minimapSelector
{
  position: absolute;
  top: 0;
  left: 0;
  width: 296px;
  height: 296px;
  box-sizing: border-box;
  border: 2px solid #662D91;
  border-radius: 1px;
}

#scaledDiv
{
  pointer-events: none;
}

  #scaledDiv *
  {
    overflow: hidden;
  }

.handle
{
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  cursor: move;
  cursor: -webkit-grab;
  cursor: grab;
}

.ui-sortable-helper .handle
{
  cursor: move;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.parameter-effect .handle
{
  padding: 0 5px;
}

/* Parameters */
#paramTabs > div > div > select
{
  width: auto;
}

/* This is the class for sections for property values and parameter effects */
.section
{
    margin: 0 auto 15px;
}
/* This is the class for subsections for property values and parameter effects */
.subsection
{
    margin-left: 15px;
    margin-bottom: 15px;
}

.ui-tooltip-content
{
    font-size: 10pt;
}

/* Evaluations */

.evaluation-expression,
.scale-expression,
.expression {
  box-sizing: border-box;
  margin: 3x;
  margin-right: 1px;
  padding: 3px;
  padding-right: 1px;
  background: rgba(242, 212, 61, 0.2);
  border: 1px solid rgba(166, 124, 65, 0.25);
  border-radius: 3px;
}

.evaluation-expression {
  display: block;
}

.scale-expression,
.expression {
  display: inline-block;
}

.define-type {
  width: 36px;
  height: 36px;
}

.define-type:hover {
  opacity: 0.6;
  cursor: pointer;
}

.markdown-tooltip {
  position: relative;
  display: none;
  text-align: right;
  height: 0;
}

.markdown-tooltip img
{
  width: 10px;
  height: 10px;
  padding: 5px;
  border: 1px solid rgba(0, 0, 0, 0.25);
  background: rgba(255, 255, 255, 0.95);
  border-radius: 3px;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
}

textarea:focus + .markdown-tooltip, input:focus + .markdown-tooltip {
  display: block;
}

#colorPicker {
  z-index: 51;
  animation: pop-in 0.20s ease-in-out 0s;
  -webkit-filter: drop-shadow(0px 2px 3px rgba(0,0,0,0.5));
  filter: drop-shadow(0px 2px 3px rgba(0,0,0,0.5));
}

@keyframes pop-in {
  0% { transform: translate(-50%, -50%) scale(0.75); opacity: 0; }
  50% { opacity: 1; }
  75% { transform: translate(-50%, -50%) scale(1.025); }
  100% { transform: translate(-50%, -50%) scale(1); }
}

.segment:hover {
  opacity: 0.75;
}

.color {
  border-style: outset;
}

#colorPicker .edit, #colorPicker .close {
  pointer-events: all;
  opacity: 0.6;
}

#colorPicker .edit:hover, #colorPicker .close:hover {
  opacity: 1;
  cursor: pointer;
}

.unsavedChanges::after {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 100%;
  background: #e57373;
  vertical-align: middle;
}

.clicktag svg,
.masterclicktag svg
{
  width: 16px;
  height: 16px;
  fill: currentColor;
  opacity: .75;
  padding: 0;
}

#toolbar
{
  border-right: 1px solid rgba(0, 0, 0, 0.1);
}

#menus
{
  display: flex;
  background-color: rgba(255, 255, 255, 0.25);
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

#menus > *
{
  flex: 0 1 auto;
}

#menus #scenarioNameTab
{
  /* Stretch element to available width */
  flex: 1 0 auto;
  align-self: center;
}

#menus .buttonGroup
{
  margin: 0;
}

#menus button
{
  height: auto;
  text-align: left;
}

#menus button:hover,
#menus button.dropped
{
  background-color: rgba(0, 0, 0, 0.05);
}

/* Dropdown menu items */
#menus .dropdown button
{
  display: block;
}

#menus .dropdown svg
{
  margin-right: 10px;
}

#menus .dropdownButton
{
  height: 32px;
}

.iconButton svg
{
  width: 16px;
  height: 16px;
  fill: currentColor;
  margin: 3px 5px;
  vertical-align: text-bottom;
  cursor: pointer;
}

.iconButton.add svg
{
  fill: #0080bf;
}

.iconButton.delete svg
{
  fill: #d92b2b;
}

.iconButton.time svg
{
  fill: #2b8000;
}

svg .r
{
  fill: #ce192a;
}

svg .b
{
  fill: #00aeef;
}

svg .y
{
  fill: #F59341;
}

svg .p
{
  fill: #662d91;
}

svg .g
{
  fill: #2b8000;
}

svg .t
{
  fill: #2b8090;
}

svg .s
{
  fill: #b38659;
}
svg .w
{
  fill: white;
}

.imgDiv svg
{
  width: 16px;
  height: 16px;
  fill: rgba(0, 0, 0, 0.85);
  margin: 1px;
  position: relative;
}

